--- a/frontend/src/app/core/navigation/navigation.component.html
+++ b/frontend/src/app/core/navigation/navigation.component.html
@@ -1,11 +1,15 @@
 <nav>
-    <a href="#" title="Home Page">Home</a>
-    <a href="#" title="Offers Catalog">Vehicle offers</a>
-    <a href="#" title="Repair vehicle">Vehicle service and repair</a>
-    <a href="#" title="About Page">About Us</a>
-    <a href="#" title="Frequently Asked Questions">FAQ</a>
-    <a href="#" title="Login">Login</a>
-    <a href="#" title="Register">Register</a>
-    <a href="#" title="Profile">Profile</a>
-    <a href="javascript: void(0)" title="Logout">Logout</a>
+    <a routerLink="/" title="Home Page">Home</a>
+    <a routerLink="/" title="Offers Catalog">Vehicle offers</a>
+    <a routerLink="/" title="About Page">About Us</a>
+    <a routerLink="/" title="Frequently Asked Questions">FAQ</a>
+    <div *ngIf="!isLoggedIn">
+        <a routerLink="/users/login" title="Login">Login</a>
+        <a routerLink="/users/register" title="Register">Register</a>
+    </div>
+    <div *ngIf="isLoggedIn">
+        <a routerLink="/" title="Repair vehicle">Vehicle service and repair</a>
+        <a routerLink="/users/:userId/profile" title="Profile">{{user?.username}} - My Profile</a>
+        <a routerLink="/users/logout" title="Logout">Logout</a>
+    </div>
 </nav>
