--- a/frontend/src/app/offers/offers-list/offers-list.component.html
+++ b/frontend/src/app/offers/offers-list/offers-list.component.html
@@ -455,10 +455,10 @@
             <p>{{offer.price}}</p>
             <p>{{offer.year}}</p>
             <p>{{offer.description}}</p>
-            <img src="{{offer.imageUrl}}">
+            <img [attr.src]="offer.imageUrl">
             <p>{{offer.phoneNumber}}</p>
         </div>
     </div>
-    <h2 *ngIf="offersList == null">There aren't any offers yet!</h2>
+    <h2 *ngIf="offersList == null || offersList.length <= 0">There aren't any offers yet!</h2>
 
 </main>
