--- a/frontend/src/app/offers/offer-details/offer-details.component.html
+++ b/frontend/src/app/offers/offer-details/offer-details.component.html
@@ -1,1 +1,17 @@
-<p>offer-details works!</p>
+<app-loader *ngIf="!offerDetails"></app-loader>
+<main>
+
+    <div class="details" *ngFor="let offer of offerDetails">
+        <h2>{{offer?.vehicleBrand}}</h2>
+        <h3>{{offer?.vehicleModel}}</h3>
+        <p>{{offer?.price}}</p>
+        <p>{{offer?.year}}</p>
+        <p>{{offer?.description}}</p>
+        <img src="{{offer?.imageUrl}}" alt="{{offer?.vehicleBrand}} {{offer?.vehicleModel}}"/>
+        <p>{{offer?.phoneNumber}}</p>
+        <div *ngIf="offer?._ownerId == user?._id" class="buttons-offer">
+            <button (click)="editHandler()">Edit</button>
+            <button (click)="deleteHandler()">Delete</button>
+        </div>
+    </div>
+</main>
