--- a/frontend/src/app/core/main-content/main-content.component.html
+++ b/frontend/src/app/core/main-content/main-content.component.html
@@ -4,7 +4,7 @@
 
         <h1>RBS Vehicle Express</h1>
         <p>All-in-one place for your vehicles: <span>buy, sell and repair services!</span></p>
-        <a class="get-started" href="catalog.html">GET STARTED!</a>
+        <a class="get-started" routerLink="/data/offers">GET STARTED!</a>
 
     </div>
 
