--- a/frontend/src/app/core/not-found/not-found.component.html
+++ b/frontend/src/app/core/not-found/not-found.component.html
@@ -3,7 +3,7 @@
     <div>
         <span>4</span>
         <span><img
-                [attr.src]="'https://lh3.googleusercontent.com/u/0/drive-viewer/AFDK6gNJjOPWYjW29x9mF_GczggOzmvubxmfrdFcnyPwOML6H-KxelDTnqEe_kRcmBRMPH4zF767tCWykQOKM_ZaBSERBAkU=w1366-h615'"></span>
+                [attr.src]="'https://lh3.googleusercontent.com/u/0/drive-viewer/AFDK6gNJjOPWYjW29x9mF_GczggOzmvubxmfrdFcnyPwOML6H-KxelDTnqEe_kRcmBRMPH4zF767tCWykQOKM_ZaBSERBAkU=w1366-h615'" alt="0"></span>
         <span>4</span>
 
         <br>
