--- a/frontend/src/app/offers/offer-details/offer-details.component.html
+++ b/frontend/src/app/offers/offer-details/offer-details.component.html
@@ -14,4 +14,5 @@
             <button (click)="deleteHandler()">Delete</button>
         </div>
     </div>
+    <h2 *ngIf="offerDetails == undefined">Offer does not exist!</h2>
 </main>
